[package]
name = "chartsapi-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
quick-xml = { version = "0.37.2", features = ["serialize"] }
reqwest = { version = "0.12.12" }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.95"
axum = "0.8.1"
indexmap = { version = "2.7.1", features = ["serde"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
chrono = "0.4.39"
